--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -58,7 +58,7 @@ log4j.appender.H.layout =org.apache.log4j.HTMLLayout
 log4j.appender.Gucas=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.Gucas.Encoding=utf-8
 log4j.appender.Gucas.DatePattern='.'yyyy-MM-dd
-log4j.appender.Gucas.File=${catalina.base}/logs/springmvc.log
+log4j.appender.Gucas.File=${catalina.base}/logs/zookeeper.log
 log4j.appender.Gucas.layout=org.apache.log4j.PatternLayout
 log4j.appender.Gucas.layout.ConversionPattern=%d{ISO8601} %5p %t %c - %m%n
 
